<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_continua</name>
  <version>0.1.0</version>
  <description>A server for continuous franka motion control</description>
  <maintainer email="wngfra@gmail.com">wngfra</maintainer>
  <license>Apache License 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>franka_interfaces</build_depend>
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>franka_interfaces</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
